--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,11 +1,13 @@
 
 .navigation{
+  
 display: flex;
 justify-content: space-between;
 box-sizing: border-box;
 height: 50px;
 background-color: rgb(0, 140, 255, 1);
 vertical-align: middle;
+padding: 15px;
 }
 
 .home-link{
